--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^3.0.2",
     "tailwindcss": "^4.1.11",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.73",
     "zustand": "^5.0.6"
   },
